8223389: Shenandoah optimizations fail with assert(!phase->exceeding_node_budget())

Reviewed-by: thartmann